--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>SESI SENAI</h1>
     <h3>Escola de formação tecnica</h3>
+
+    <p>
+        O Senai está neste momento com uma parceria com o SESI
+    </p>
 </body>
 </html>
